# chartster

./: .gitignore  Chartster.spec  README.md  launch_gui.py  pyproject.toml
.github/workflows/: release.yml
chartster/: __init__.py  chart.py  cli.py  config.py  fetch.py  gui.py  lyrics.py  mapping.py  songsterr.py  video_points.py
docs/: demo.webm
