[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chartster"
version = "0.1.0"
description = "Convert Songsterr drum tabs to Clone Hero expert drum charts."
requires-python = ">=3.9.6"
dependencies = []

[project.optional-dependencies]
gui = ["PySide6>=6.6"]

[project.scripts]
chartster = "chartster.cli:main"
chartster-gui = "chartster.gui:main"

[tool.setuptools.packages.find]
include = ["chartster*"]
