[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chartster"
version = "0.3.9"
description = "Convert Songsterr drum tabs to Clone Hero expert drum charts."
requires-python = ">=3.9.6"
dependencies = []

[project.optional-dependencies]
gui = ["pyside6-essentials>=6.6"]
build = ["pyinstaller>=6.0"]

[project.scripts]
chartster = "chartster.cli:main"
chartster-gui = "chartster.gui:main"

[tool.setuptools.packages.find]
include = ["chartster*"]
